bomc-kubernetes-event/bomc-invoice/deployment/istio/bomc-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bomc-invoice
  namespace: bomc-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bomc-invoice
    spec:
      containers:
      - name: bomc-invoice
        image: bomc/bomc-invoice:v1.0.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "200m"
        ports:
        - containerPort: 8080
          protocol: TCP
#        livenessProbe:
#          httpGet:
#            path: /bomc-invoice/rest/health/liveness
#            port: 8080
#          initialDelaySeconds: 25
#          timeoutSeconds: 1
#          periodSeconds: 30
#          failureThreshold: 1
#        readinessProbe:
#          httpGet:
#            path: /bomc-invoice/rest/health/readiness
#            port: 8080
#          initialDelaySeconds: 25
#          timeoutSeconds: 1
#          periodSeconds: 30
#          failureThreshold: 1
---
