bomc-kubernetes-event/bomc-invoice/deployment/istio/bomc-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bomc-invoice-service
  namespace: bomc-app
  labels:
    app: bomc-invoice
spec:
  selector:
    app: bomc-invoice
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 8080
  type: NodePort
---
